<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- background picture -->
    <ImageView
        android:id="@+id/iv_background"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />

    <!--     Darkening -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000" />

    <!-- header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
<!--        btn_menu-->
        <ImageButton
            android:id="@+id/btn_header_menu"
            style="@style/HeaderIconButton"
            android:src ="@drawable/ic_menu"
            android:contentDescription="@string/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--       btn_map-->
        <ImageButton
            android:id="@+id/btn_header_map"
            style="@style/HeaderIconButton"
            android:src="@drawable/ic_map"
            android:contentDescription="@string/map"
            app:layout_constraintStart_toEndOf="@id/btn_header_menu"
            app:layout_constraintTop_toTopOf="parent"/>
<!--       btn volume_mute-->
        <ImageButton
            android:id="@+id/btn_header_volume_mute"
            style="@style/HeaderIconButton"
            android:src="@drawable/ic_volume_mute"
            android:contentDescription="@string/volume_mute"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--       btn volume_free-->
        <ImageButton
            android:id="@+id/btn_header_volume_free"
            style="@style/HeaderIconButton"
            android:src="@drawable/ic_volume_free"
            android:contentDescription="@string/volume_free"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Field of menu, is visible after click of btn_menu -->
    <FrameLayout
        android:id="@+id/menu_field"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#90000000" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:maxWidth="420dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="14dp"
                    android:text="@string/menu_field_menu"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_menu_field_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/menu_field_continue"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_menu_field_restart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:layout_marginBottom="6dp"
                    android:text="@string/menu_field_restart"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_field_text"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

    <!--    Story and choose variants field-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:id="@+id/scroll_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="bottom">
                <!--    Story field-->
                <TextView
                    android:id="@+id/tv_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/menu_field_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_story_field"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>